--- a/BiTCN.ipynb
+++ b/BiTCN.ipynb
@@ -447,6 +447,20 @@
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Validation: |                                                                                    | 0/? [00:00<…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -482,7 +496,27 @@
    "id": "cad0b3e3-48ab-4c81-9de4-b1fb9974b376",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "published_dates = test_df[test_df['published'] == 1]\n",
+    "holidays = test_df[test_df['is_holiday'] == 1]\n",
+    "\n",
+    "fig, ax = plt.subplots(figsize=(12,8))\n",
+    "\n",
+    "ax.plot(test_df['ds'], test_df['y'], label='Actual')\n",
+    "ax.plot(test_df['ds'], test_df['NHITS'], label='N-HiTS')\n",
+    "ax.plot(test_df['ds'], test_df['BiTCN'], label='BiTCN')\n",
+    "ax.plot(test_df['ds'], test_df['PatchTST'], label='PatchTST')\n",
+    "ax.scatter(published_dates['ds'], published_dates['y'], marker='o', color='red')\n",
+    "ax.scatter(holidays['ds'], holidays['y'], marker='x', color='green')\n",
+    "ax.set_xlabel('Day')\n",
+    "ax.set_ylabel('Total views')\n",
+    "ax.legend(loc='best')\n",
+    "\n",
+    "fig.autofmt_xdate()\n",
+    "\n",
+    "\n",
+    "plt.tight_layout()"
+   ]
   },
   {
    "cell_type": "code",
@@ -490,7 +524,22 @@
    "id": "4d83f0d8-59d0-4b3a-b7c6-e04d235ff2ad",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from utilsforecast.losses import mae, smape\n",
+    "from utilsforecast.evaluation import evaluate\n",
+    "\n",
+    "evaluation = evaluate(\n",
+    "    test_df,\n",
+    "    metrics=[mae, smape],\n",
+    "    models=[\"NHITS\", \"BiTCN\", \"PatchTST\"],\n",
+    "    target_col=\"y\",\n",
+    ")\n",
+    "\n",
+    "evaluation = evaluation.drop(['unique_id'], axis=1)\n",
+    "evaluation = evaluation.set_index('metric')\n",
+    "\n",
+    "evaluation.style.highlight_min(color='blue', axis=1)"
+   ]
   },
   {
    "cell_type": "code",
